[project]
name = "lizard-tui"
version = "0.1.0"
description = "A Terminal User Interface for visualizing Lizard code complexity analysis"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
    "lizard>=1.17.0",
]

[project.scripts]
lizard-tui = "lizard_tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
